--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,13 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-raleway-sans);
+
+  /* Colors */
+  --color-primary: #E3DDD3;
+  --color-primary-200: #DCD0BB;
+  --color-secondary: #8E9878;
+  --color-tertiary: #A37409;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +24,18 @@
   }
 }
 
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  
+  @media screen and (max-width: 900px) {
+    max-width: 80%;
+    
+  }
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--color-primary);
+  color: var(--background);
+  font-family: Raleway, Arial, Helvetica, sans-serif;
 }
