--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,7 @@ body {
   color: var(--background);
   font-family: Raleway, Arial, Helvetica, sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
